--- a/README.asciidoc
+++ b/README.asciidoc
@@ -18,7 +18,7 @@
 的顶点要连通，其次加上选出来顶点的邻居顶点要包含所有顶点。我们可以用状态压缩 DP 维护
 ， `connected[state]=true` 。那么有 `connected[state \| (1<<v)]=true`, `v` 是
 `state` 表示节点的一个没被包含的邻居。最后答案就是最小连通顶点数的 `state` 且满足
-`state` 中所有顶点加上其的邻居包含了全部的顶点。 asciimath:[a^{\varphi(x)}], latexmath:[a^{\varphi(x)}]
+`state` 中所有顶点加上其的邻居包含了全部的顶点。 latexmath:[a^{\varphi(x)}], latexmath:[a^{\varphi(x)}]
 
 | cf906d | {y}
 | math, number theory, euler theorem
@@ -29,6 +29,14 @@
 | string
 |
 |
+
+| cf901b | {y}
+| construction
+| 求恰好 `n` 步的多项式 Euclid's algorithm。满足所有系数只能是 `-1, 0, 1` 且最
+高次不能超过 `n`, 第一个多项式的次数要比第二个的大。
+| 整数的 Euclid's algorithm 最坏情况在 Fibonacci 数列上发生。对于多项式，我们可以类似构造 latexmath:[P_{n+1} = x P_n \pm P_{n-1}]，
+要注意多项式系数的约束条件。
+还有一种更好的方式， latexmath:[P_{n+1} = x P_n + P_{n-1} \mod 2]。
 
 |====
 
