[@] solution for poj1947

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -38,5 +38,10 @@
 要注意多项式系数的约束条件。
 还有一种更好的方式， latexmath:[P_{n+1} = x P_n + P_{n-1} \mod 2]。
 
+| poj1947 | {y}
+| tree dp, pack
+| 求使一棵树有一个大小为 p 的独立的子树至少需要删除多少边。
+| 树形 dp，对每个顶点的子树做背包。按 dfs 序不断把之前的子树所有状态先处理完实现比较简单。
+
 |====
 
