[@] tags for poj3259

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -43,5 +43,10 @@
 | 求使一棵树有一个大小为 p 的独立的子树至少需要删除多少边。
 | 树形 dp，对每个顶点的子树做背包。按 dfs 序不断把之前的子树所有状态先处理完实现比较简单。
 
+| poj3259 | {y}
+| shortest-path, negative circle
+|
+|
+
 |====
 
