[@] solution for ural1040

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -48,5 +48,10 @@
 |
 | spfa, 一个点出现超过 `n` 次即有负环。
 
+| ural1040 | {y}
+| gcd, dfs, bazinga
+| 给定一个简单图，要用 `1-m` 给每条边无重复编号，使得最后每个点相邻边的标号的 gcd 值为 `1` 。
+| 主要到一个点相邻的边只要有两条互质那么整体 gcd 肯定为 `1` ，而且 `1-m` 相邻两数是互质的，所以只需要做一遍 dfs 就好。
+
 |====
 
