--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,11 +1,11 @@
-== Competitive Programming
-
+= Competitive Programming
+:toc:
 :y: &#10003;
 :stem:
 
-=== problems
+== Ural
 
-[cols="^.^, ^.^, ^.^, ^.^, ^.^", options="header"]
+[cols="^.^1, ^.^1, ^.^1, ^.^3, ^.^3", options="header"]
 |====
 
 | problem | status | tags | description | solution
@@ -22,9 +22,10 @@
 
 |====
 
-=== codeforces
 
-[cols="^.^, ^.^, ^.^, ^.^, ^.^", options="header"]
+== Codeforces
+
+[cols="^.^1, ^.^1, ^.^1, ^.^3, ^.^3", options="header"]
 |====
 
 | problem | status | tags | description | solution
@@ -57,6 +58,21 @@
 要注意多项式系数的约束条件。
 还有一种更好的方式， latexmath:[P_{n+1} = x P_n + P_{n-1} \mod 2]。
 
+
+|====
+
+
+== Other
+
+[cols="^.^1, ^.^1, ^.^1, ^.^3, ^.^3", options="header"]
+|====
+
+| problem | status | tags | description | solution
+
+| poj1947 | {y}
+| tree dp, pack
+| 求使一棵树有一个大小为 p 的独立的子树至少需要删除多少边。
+| 树形 dp，对每个顶点的子树做背包。按 dfs 序不断把之前的子树所有状态先处理完实现比较简单。
 
 |====
 
