--- a/README.asciidoc
+++ b/README.asciidoc
@@ -13,12 +13,15 @@
 | ural1040 | {y}
 | gcd, dfs, bazinga
 | 给定一个简单图，要用 `1-m` 给每条边无重复编号，使得最后每个点相邻边的标号的 gcd 值为 `1` 。
-| 主要到一个点相邻的边只要有两条互质那么整体 gcd 肯定为 `1` ，而且 `1-m` 相邻两数是互质的，所以只需要做一遍 dfs 就好。
+| 主要到一个点相邻的边只要有两条互质那么整体 gcd 肯定为 `1` ，而且 `1-m` 相邻两
+数是互质的，所以只需要做一遍 dfs 就好。
 
 | ural1006 | {y}
 | brute-force
 | 给定 `N` 个矩形边框重叠后的俯视图（只有重叠部分的字符会被覆盖），让还原一组可能的矩形以及顺序。
-| 每次枚举左上角和边长，看看有没有对应的矩形，然后把这个矩形删除后用一个万能字符替代，只要一个矩形不是全都是万能字符就好。这题比较坑的在于输入输出，用 `char` ，按字节理解，如果要可视化的化单独写个程序。
+| 每次枚举左上角和边长，看看有没有对应的矩形，然后把这个矩形删除后用一个万能字
+符替代，只要一个矩形不是全都是万能字符就好。这题比较坑的在于输入输出，用 `char`
+，按字节理解，如果要可视化的化单独写个程序。
 
 | ural1030 | {y}
 | math, formulas
@@ -40,8 +43,9 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | ural1035 | {y}
 | graph
 | 欧拉路径（环）
-| 我们处理每个方格格点，计算正面（背面）线个数，然后将多出来的正面（背面）线个数累加到对应连通分量的对应正面（背面）个数，假如说某个连通分量
-正面多出来的线个数和是 `a`, 背面是 `b`, 那么这个连通分量需要 latexmath:[\min (a, b) + \frac{\mid a-b \mid}{2}] 针。连通分量用并查集维护。
+| 我们处理每个方格格点，计算正面（背面）线个数，然后将多出来的正面（背面）线个
+数累加到对应连通分量的对应正面（背面）个数，假如说某个连通分量正面多出来的线个
+数和是 `a`, 背面是 `b`, 那么这个连通分量需要 latexmath:[\min (a, b) + \frac{\mid a-b \mid}{2}] 针。连通分量用并查集维护。
 
 | ural1065 | {y}
 | dp, computational geometry
@@ -81,9 +85,9 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | construction
 | 求恰好 `n` 步的多项式 Euclid's algorithm。满足所有系数只能是 `-1, 0, 1` 且最
 高次不能超过 `n`, 第一个多项式的次数要比第二个的大。
-| 整数的 Euclid's algorithm 最坏情况在 Fibonacci 数列上发生。对于多项式，我们可以类似构造 latexmath:[P_{n+1} = x P_n \pm P_{n-1}]，
-要注意多项式系数的约束条件。
-还有一种更好的方式， latexmath:[P_{n+1} = x P_n + P_{n-1} \mod 2]。
+| 整数的 Euclid's algorithm 最坏情况在 Fibonacci 数列上发生。对于多项式，我们可
+以类似构造 latexmath:[P_{n+1} = x P_n \pm P_{n-1}]，要注意多项式系数的约束条件
+。还有一种更好的方式， latexmath:[P_{n+1} = x P_n + P_{n-1} \mod 2]。
 
 
 |====
@@ -99,7 +103,8 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | poj1947 | {y}
 | tree dp, pack
 | 求使一棵树有一个大小为 p 的独立的子树至少需要删除多少边。
-| 树形 dp，对每个顶点的子树做背包。按 dfs 序不断把之前的子树所有状态先处理完实现比较简单。
+| 树形 dp，对每个顶点的子树做背包。按 dfs 序不断把之前的子树所有状态先处理完实
+现比较简单。
 
 |====
 
