--- a/README.asciidoc
+++ b/README.asciidoc
@@ -67,9 +67,16 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1043 | {y}
 | geometry
-| 给定圆弧两段点，以及圆弧上一点（都是整点），问用平行坐标轴且顶点坐标的矩形完全覆盖这个圆弧最小面积。
+| 给定圆弧两段点，以及圆弧上一点（都是整点），问用平行坐标轴且顶点坐标的矩形完
+全覆盖这个圆弧最小面积。
 | 点在圆弧上用角度判断就好，都转换到 [0, 2pi)。
 
+| ural1062 | {y}
+| geometry, half-plane intersection
+| 给定铁人三项每个人每项的速度, 问是否存在一个三种路线的长度使得第 i 个人总时间
+比所有人都小。
+| 假设第一项距离为 x，第二项为 y，那么可以假设第三项为 1-x-y，我们可以得道 n-1
+个半平面，然后求交就行。注意还有 x>=0, y>=0, x+y<=1。
 |====
 
 == Codeforces
