[@] fix `<=` replacements to &lt; &gt;
mathematical symbols like format in markdown

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -51,8 +51,8 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1065 | {y}
 | dp, computational geometry
-| 给定一个 n(<=50) 个点的凸多边形，顶点是哨塔，按照给定的顺序沿多边形巡逻。现在
-想减少巡逻距离，可以选择不经过若干哨塔。但是给定 m(<=1000) 个纪念碑，要求纪念碑
+| 给定一个 n(&le; 50) 个点的凸多边形，顶点是哨塔，按照给定的顺序沿多边形巡逻。现在
+想减少巡逻距离，可以选择不经过若干哨塔。但是给定 m( &le; 1000) 个纪念碑，要求纪念碑
 都在巡逻路线内部，求最短的巡逻路线。
 | 为了处理环形关系我们可以将 n 个点复制一遍。然后可以预处理出 i 到 j 这一段左边
 是不是有纪念碑，然后就可以枚举起点来做 dp，其实也可以 floyd，最后要记得枚举三个
@@ -61,7 +61,7 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1097 | {y}
 | discretization
-| 给定一个 l*l 的正方形，里面有 m(<=100) 个不重叠子正方形，每个正方形都有个权重，
+| 给定一个 l*l 的正方形，里面有 m( &le; 100) 个不重叠子正方形，每个正方形都有个权重，
 现在问一个找 a*a 的子正方形，且重叠到上面子正方形的最大权重最小。空白区域默认为 1。
 | 离散化 x, y，然后枚举所有可能坐标，二分权重。
 
@@ -76,7 +76,7 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | 给定铁人三项每个人每项的速度, 问是否存在一个三种路线的长度使得第 i 个人总时间
 比所有人都小。
 | 假设第一项距离为 x，第二项为 y，那么可以假设第三项为 1-x-y，我们可以得道 n-1
-个半平面，然后求交就行。注意还有 x>=0, y>=0, x+y<=1。
+个半平面，然后求交就行。注意还有 x &ge; 0, y &ge; 0, x+y &le; 1。
 |====
 
 == Codeforces
