--- a/README.asciidoc
+++ b/README.asciidoc
@@ -76,7 +76,9 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | 给定铁人三项每个人每项的速度, 问是否存在一个三种路线的长度使得第 i 个人总时间
 比所有人都小。
 | 假设第一项距离为 x，第二项为 y，那么可以假设第三项为 1-x-y，我们可以得道 n-1
-个半平面，然后求交就行。注意还有 x &ge; 0, y &ge; 0, x+y &le; 1。
+个半平面，然后求交就行。注意还有 x &ge; 0, y &ge; 0, x+y &le; 1。还有要注意的是
+得到的直线可能无解，或者全平面，要特殊处理。
+
 |====
 
 == Codeforces
