[+] solution for 1041, matroid, greedy

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -86,6 +86,14 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | 我们假设凸多边形第一个顶点坐标为 p0，那么可以在复平面上通过向量旋转得到 p1，
 这样绕一圈可以得到一个 p0 关于 p0 的方程。解出 p0 再推出所有点就行。
 
+| ural1041 | {y}
+| matroid, greedy, gaussian-elimination
+| 给定 m(&le; 2000) 个 n(&le; <= 50) 维向量，每个向量有个价格，求找 n 个线性无关向量的最小价值，
+输出字典序最小的一组解。无解输出 0。
+| 贪心做，排序后不断取，如果加入当前向量还能线性无关，就加入，顺便把下面的向量当前维度消掉。做当前向量时要把
+非零列交换过来。这题用 double 会跪，需要用模素数的整数运算才能过。支持这套贪心的理论其实就是 matroid。
+做这题发现还有人写过这个，刘雨辰《对拟阵的初步研究》。
+
 |====
 
 == Codeforces
