[+] solution for ural1063

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -94,6 +94,15 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 非零列交换过来。这题用 double 会跪，需要用模素数的整数运算才能过。支持这套贪心的理论其实就是 matroid。
 做这题发现还有人写过这个，刘雨辰《对拟阵的初步研究》。
 
+| ural1063 | {y}
+| graph, euler paths
+| 一个多米若骨牌由两个数字（数字 &le; 6）构成，现在给定 n(&le; 100) 个多米若骨
+牌，想将其排成一排，使得相邻头尾相接的数字相等。问要插入怎样的骨牌使得插入骨牌
+的数字和最小。
+| 看着很复杂，其实就是一个顶点数为 6 的图，一个骨牌就是一条边，最后要求的就是一
+个欧拉路。不过虽然抽象出来很简单，但是加边情况很多，似乎也没什么好办法。最后暴
+力连接连通分量，然后贪心连奇数度的边。
+
 |====
 
 == Codeforces
