--- a/README.asciidoc
+++ b/README.asciidoc
@@ -106,8 +106,19 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | ural1058 |
 | geometry
 | 给定 n (&le; 50) 的凸多边形，问将其均分成两个面积相等的两半的最短线段长度是多少。
-
 | 需要证明均分面积的最短线段和其切到的两边夹角相等。
+
+| ural1841 | {y}
+| data structures
+| 给定 n(&le; 10\^5) 个首尾相接的线段的 x 坐标，表示一个山从下到上的形状。
+每个线段上可能有若干索道，可以直线上升到于下一个线段相交的位置。告诉你每个
+线段上移动一个单位 x 距离所需要的时间以及每个索道所需要的时间，并且你只能
+按 y 递增的方向移动，问到山顶的最短时间。（索道总数不超过 10\^5）。
+| 我们可以按顺序处理每个区间，看这个区间 x 坐标范围内有多少索道上升过来，
+这个可以用 set 的 lower_bound 维护出不小于左边界 l 的位置。也可以用树状数组，
+二分出这个位置。
+其实我们就是想求 n 个数，每个数右边比如第一个比他大的数，这个其实可以通过单调队列算出来。
+不过这种从前往后推的想法好像比较难写。
 
 |====
 
