[+] solution for ural1887

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -153,12 +153,22 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 | 给定一个长度为 n(&le; 10{caret}5) 的字符串，给定一个数 k(&le; 50)，现在有两种操作，
 将一段区间的字符都改成 c，或者询问一段区间长度不超过 k 的回文串的数目。操作数目不超过 (&le; 10{caret}5)。
 | 一开始想了一种做法，维护每个区间两端连续不超过 50 的字符串，然后每次合并跑下 manacher，
-就能维护出每个区间回文串个数的信息。但是常数太大了。也可以维护每个点为左端点，长度不超过 k 的回文串个数。
-假如说有一段区间覆盖 [l, r]，为了简化讨论，假设区间足够长，那么 [l, r-k+1] 的上述值都成 k。
-然后还要单独处理 [l-1-k+1, l-1] 以及 [r-k+2, r] 这两段区间。为了降低常数，对这两段区间
-的字符串分别做个 manacher，不要一个一个单点修改，一段区间一段区间修改。
+就能维护出每个区间回文串个数的信息。但是常数太大了。也可以维护每个点为左端点，
+长度不超过 k 的回文串个数。假如说有一段区间覆盖 [l, r]，为了简化讨论，假设区间足够长，
+那么 [l, r-k+1] 的上述值都成 k。然后还要单独处理 [l-1-k+1, l-1] 以及 [r-k+2, r] 这两段区间。
+为了降低常数，对这两段区间的字符串分别做个 manacher，不要一个一个单点修改，一段区间一段区间修改。
 事实上常数更低的正确做法是使用 non-recursive segment tree。
 参考这个链接 http://codeforces.com/blog/entry/18051[Efficient and easy segment trees] TODO。
+
+| ural1887 | {y}
+| probability, dp
+| 抽象下题意，现在有一个数字生成器，每次可以生成数字 0-9 中的一个，告诉你一次生成中生成每个数字的概率，
+问要使生成的数字中 0-9 都出现过的期望生成次数是多少。
+| 一个可行的做法是用二进制状态表示每次生成数字的状态，那么我们可以构建一个图，
+图中的有向边表示一次生成可以发生的状态变化。该图有自环，除了自环是个 dag，
+可以进行递推，自环的情况可以用方程解出来。我们可以用 f[state] 表示从 state
+到目标状态 1023 的期望次数，每次转移只要枚举每条边，然后考虑自环解个方程就行。
+最后 f[0] 就是答案。
 
 |====
 
