[+] solution for ural1717

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,6 +1,7 @@
 = Competitive Programming
 :toc:
 :y: &#10003;
+:le: &le;
 :ellipsis: …
 :stem:
 
@@ -147,6 +148,14 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 但是是个树状的结构，那么我们也可以在 dfs 的过程中，当处理完一个节点恢复就行。
 这里最坑的是 ural 空间卡的比较紧。用了 std::vector 的 reserve 在 g++ 没什么用，
 结果用 clang 就过了 {ellipsis}
+
+| ural1717 | {y}
+| data structures
+| 抽象下题意，二维空间中 n({le} 1500) 个点，每个点有可正可负的权值，求一个平行坐标轴的子矩形，
+使得矩形内点权值和最大。
+| 先离散化，就成了 N * N 的矩阵。然后我们扫描子矩形的左边界，然后从这个位置依次像右扫描右边界。
+每次扫过一个 x 就累加到对应位置。这样我们要求的最大子矩形其实就是一维的最大字段和。
+线段树可以维护出来。
 
 | ural2042 | {y}
 | data structures, segment tree
