--- a/README.asciidoc
+++ b/README.asciidoc
@@ -2,6 +2,7 @@
 :toc:
 :y: &#10003;
 :le: &le;
+:ge: &ge;
 :ellipsis: …
 :stem:
 
@@ -53,8 +54,8 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1065 | {y}
 | dp, computational geometry
-| 给定一个 n(&le; 50) 个点的凸多边形，顶点是哨塔，按照给定的顺序沿多边形巡逻。
-现在想减少巡逻距离，可以选择不经过若干哨塔。但是给定 m( &le; 1000) 个纪念碑，
+| 给定一个 n({le} 50) 个点的凸多边形，顶点是哨塔，按照给定的顺序沿多边形巡逻。
+现在想减少巡逻距离，可以选择不经过若干哨塔。但是给定 m( {le} 1000) 个纪念碑，
 要求纪念碑都在巡逻路线内部，求最短的巡逻路线。
 | 为了处理环形关系我们可以将 n 个点复制一遍。然后可以预处理出 i 到 j
 这一段左边是不是有纪念碑，然后就可以枚举起点来做 dp，其实也可以 floyd，
@@ -63,7 +64,7 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1097 | {y}
 | discretization
-| 给定一个 l*l 的正方形，里面有 m( &le; 100) 个不重叠子正方形，每个正方形都有个权重，
+| 给定一个 l*l 的正方形，里面有 m( {le} 100) 个不重叠子正方形，每个正方形都有个权重，
 现在问一个找 a*a 的子正方形，且重叠到上面子正方形的最大权重最小。空白区域默认为 1。
 | 离散化 x, y，然后枚举所有可能坐标，二分权重。
 
@@ -76,7 +77,7 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 | geometry, half-plane intersection
 | 给定铁人三项每个人每项的速度, 问是否存在一个三种路线的长度使得第 i 个人总时间比所有人都小。
 | 假设第一项距离为 x，第二项为 y，那么可以假设第三项为 1-x-y，我们可以得道 n-1
-个半平面，然后求交就行。注意还有 x &ge; 0, y &ge; 0, x+y &le; 1。
+个半平面，然后求交就行。注意还有 x {ge} 0, y {ge} 0, x+y {le} 1。
 还有要注意的是得到的直线可能无解，或者全平面，要特殊处理。TODO 随机增量法。
 
 | ural1046 | {y}
@@ -88,7 +89,7 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1041 | {y}
 | matroid, greedy, gaussian-elimination
-| 给定 m(&le; 2000) 个 n(&le; <= 50) 维向量，每个向量有个价格，求找 n 个线性无关向量的最小价值，
+| 给定 m({le} 2000) 个 n({le} <= 50) 维向量，每个向量有个价格，求找 n 个线性无关向量的最小价值，
 输出字典序最小的一组解。无解输出 0。
 | 贪心做，排序后不断取，如果加入当前向量还能线性无关，就加入，顺便把下面的向量当前维度消掉。
 做当前向量时要把非零列交换过来。这题用 double 会跪，需要用模素数的整数运算才能过。
@@ -96,19 +97,19 @@ latexmath:[\Delta\sigma=\arccos\bigl(\sin\phi_1\cdot\sin\phi_2+\cos\phi_1\cdot\c
 
 | ural1063 | {y}
 | graph, euler paths
-| 一个多米若骨牌由两个数字（数字 &le; 6）构成，现在给定 n(&le; 100) 个多米若骨牌，
+| 一个多米若骨牌由两个数字（数字 {le} 6）构成，现在给定 n({le} 100) 个多米若骨牌，
 想将其排成一排，使得相邻头尾相接的数字相等。问要插入怎样的骨牌使得插入骨牌的数字和最小。
 | 看着很复杂，其实就是一个顶点数为 6 的图，一个骨牌就是一条边，最后要求的就是一个欧拉路。
 不过虽然抽象出来很简单，但是加边情况很多，似乎也没什么好办法。最后暴力连接连通分量，然后贪心连奇数度的边。
 
 | ural1058 |
 | geometry
-| 给定 n (&le; 50) 的凸多边形，问将其均分成两个面积相等的两半的最短线段长度是多少。
+| 给定 n ({le} 50) 的凸多边形，问将其均分成两个面积相等的两半的最短线段长度是多少。
 | 需要证明均分面积的最短线段和其切到的两边夹角相等。
 
 | ural1841 | {y}
 | data structures
-| 给定 n(&le; 10{caret}5) 个首尾相接的线段的 x 坐标，表示一个山从下到上的形状。
+| 给定 n({le} 10{caret}5) 个首尾相接的线段的 x 坐标，表示一个山从下到上的形状。
 每个线段上可能有若干索道，可以直线上升到于下一个线段相交的位置。告诉你每个线段上移动一个单位
 x 距离所需要的时间以及每个索道所需要的时间，并且你只能按 y 递增的方向移动，
 问到山顶的最短时间。（索道总数不超过 10{caret}5）。
@@ -120,7 +121,7 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 
 | ural1977 | {y}
 | data structures, segment tree
-| 给定 n 个点(&le; 10{caret}9) 个点，每个点每秒会增加 p 单位能量，你有个 repo 可以存储能量，
+| 给定 n 个点({le} 10{caret}9) 个点，每个点每秒会增加 p 单位能量，你有个 repo 可以存储能量，
 现在有两种操作，可以在 t 时刻把 l 到 r 的能量都存储到 repo 里，或者在 t 时刻，把 repo
 里的能量全部用于增加 i-d+1 到 i+d-1 范围内的点，第 i 个点增加 d*x，与 i 距离为 1 的增加 (d-1)*x，
 一直到增加 x 为止，x 通过用尽全部能量可以解除来。操作个数不不超过 10{caret}5，每次存储操作输出 repo 的能量值。
@@ -133,7 +134,7 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 
 | ural1965 | {y}
 | dynamic programming
-| 给定 n(&le; 10{caret}5) 的一个排列，问能否用两个不相交的单调序列覆盖。
+| 给定 n({le} 10{caret}5) 的一个排列，问能否用两个不相交的单调序列覆盖。
 | TODO
 
 | ural2075 | {y}
@@ -162,8 +163,8 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 
 | ural2042 | {y}
 | data structures, segment tree
-| 给定一个长度为 n(&le; 10{caret}5) 的字符串，给定一个数 k(&le; 50)，现在有两种操作，
-将一段区间的字符都改成 c，或者询问一段区间长度不超过 k 的回文串的数目。操作数目不超过 (&le; 10{caret}5)。
+| 给定一个长度为 n({le} 10{caret}5) 的字符串，给定一个数 k({le} 50)，现在有两种操作，
+将一段区间的字符都改成 c，或者询问一段区间长度不超过 k 的回文串的数目。操作数目不超过 ({le} 10{caret}5)。
 | 一开始想了一种做法，维护每个区间两端连续不超过 50 的字符串，然后每次合并跑下 manacher，
 就能维护出每个区间回文串个数的信息。但是常数太大了。也可以维护每个点为左端点，
 长度不超过 k 的回文串个数。假如说有一段区间覆盖 [l, r]，为了简化讨论，假设区间足够长，
