[+] solution for ural2075

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -139,8 +139,10 @@ x 距离所需要的时间以及每个索道所需要的时间，并且你只能
 
 | ural2075 | {y}
 | data structures, self-balancing binary search tree, avl
-| TODO
-| TODO
+| 有一个无限高的圆柱形杯子，然后按时间顺序发生一些事件，倒入某种酒 h 高度，将吸管放置在 h 高度，拿出吸管。
+酒名的字典序小，密度就大，酒倒入瞬间就会到对应层，两种酒不会混合。如果某时刻吸完了，且紧接着没有酒补充，
+那么吸管也将被拿出。喝酒的速度是每个单位时间喝一个单位高度。要求每个喝酒的时间段，酒名，相邻酒名不相同。
+| 这些操作都可以用平衡树简单维护出来，暴写就好，写了个 avl {ellipsis}
 
 | ural2096 | {y}
 | data structures, offline
