[+] solution for ural1526

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -220,6 +220,17 @@ wiki 上还有写扩展，比如对于 multigraph 也是适用的，还有就是
 的最大价值，这个可以枚举该层每个位置 p1 作为起点，然后 dfs 更新所有状态。
 因为房间不能经过两次，所以 dfs 很快。
 
+| ural1526 | {y}
+| dp
+| 有 n({le} 10) 种菜，然后你要点 l({le} 100) 盘菜（之前那些菜可以重复点，也可以不点某些菜）,
+然后服务员有两种操作，上一盘菜，或者收走一个空盘，但是空盘因为是叠起来的，所以必需按栈的方式收空盘。
+然后有 m({le} 100) 种关系 (i, j)，表示如果 i 这道菜的盘子在桌子上就不能上 j 这道菜。
+问服务员一共进行了 2l 次操作，共有多少不同方案数。
+| 这是一个括号匹配，可以用区间 dp。考虑一个长度为 l 的括号序列，那么最后一个位置的括号匹配的括号位置就可以进行转移。
+f[i][st] 表示还剩下 i 个操作，有 st 这些菜的方案数，那么我们枚举最后一段括号序列的长度 k，
+f[i][st] = sum(f[i-k][st] * f[k][st {vbar} (1{lt}{lt}j)])，j 最后一个括号的种类（这题就是菜的种类），
+这里需要枚举 j，判断加上 j 合不合法。
+
 |====
 
 == Codeforces
