--- a/README.asciidoc
+++ b/README.asciidoc
@@ -252,6 +252,10 @@ f[i][st] = sum(f[i-k][st] * f[k][st {vbar} (1{lt}{lt}j)])，j 最后一个括号
 
 contests please refer to https://yottacto.github.io/competitive-programming/codeforces.html[this].
 
+== POI
+
+please refer to https://yottacto.github.io/competitive-programming/poi.html[this].
+
 == Other
 
 [cols="^.^1, ^.^1, ^.^1, ^.^3, ^.^3", options="header"]
