+ solution for poi 2015, cza

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -3,6 +3,7 @@
 :ellipsis: …
 :stem:
 :toc:
+:le: &le;
 
 // TODO please reference to the GitHub Pages.
 
@@ -16,9 +17,18 @@
 .5+| stage i
 
 | cza | {y}
-|
-|
-|
+| dp
+| n ({le} 1000000) 个人（编号为 1 \~ n） 围着圆桌坐成一圈。座位相邻的两个人，其
+编号之差的绝对值不可以超过 p ({le} 3)。他们之中有些人不喜欢别人。如果 a 不喜欢 b，那么 b
+不能坐在a右边的那一个位置上。现在，假设第 n 个人的座位已经固定，要给剩下的人安
+排座位，共有几种合法方案？
+| p {le} 2 是简单的情况。考虑 p = 3 的时候。我们设，f[i] 表示以 i 开头，i\+1 结
+尾，i \~ n 这些数的方案数。g[i] 表示以 i\+1 开头，i 结尾，i \~ n 这些数的方案数
+。通过画一个树来枚举可能的情况，我们可以得到递推关系 f[i] = g[i+1] + g[i+2] +
+g[i+3] + g[i+5], 类似的可以得到关于 g 的递推关系。当然，边界情况可能会有点问题
+，所以当 n-7 {le} i 的时候，我们直接暴力算出答案，否则通过递推得到。当然，题目
+还有不喜欢的关系，在递推的时候检查不喜欢的关系即可。最后的答案也可以通过类似递
+推的方法算出来。
 
 | kin | {y}
 |
@@ -35,46 +45,46 @@
 |
 |
 
-| pie |
+| pie | {y}
 |
 |
 |
 
 .5+| stage ii
 
-| log |
+| log | {y}
 |
 |
 |
 
-| pod |
+| pod | {y}
 |
 |
 |
 
-| pus |
+| pus | {y}
 |
 |
 |
 
-| kur |
+| kur | {y}
 |
 |
 |
 
-| trz |
+| trz | {y}
 |
 |
 |
 
 .7+| stage iii
 
-| odw |
+| odw | {y}
 |
 |
 |
 
-| myj |
+| myj | {y}
 |
 |
 |
@@ -84,7 +94,7 @@
 |
 |
 
-| wil |
+| wil | {y}
 |
 |
 |
@@ -94,12 +104,12 @@
 |
 |
 
-| mod |
+| mod | {y}
 |
 |
 |
 
-| wyc |
+| wyc | {y}
 |
 |
 |
