+ solution for poi 2015, kwa

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -31,7 +31,7 @@ g[i+3] + g[i+5], 类似的可以得到关于 g 的递推关系。当然，边界
 推的方法算出来。
 
 | kin | {y}
-|
+| data structure, segment tree
 | 共有 m 部电影，编号为 1 \~ m，第 i 部电影的好看值为 w[i]。在 n 天之中（从
 1\~n 编号）每天会放映一部电影，第 i 天放映的是第 f[i] 部。你可以选择 l, r (1
 {le} l {le} r {le} n)，并观看第 l, l+1, {ellipsis}, r 天内所有的电影。如果同一
@@ -42,9 +42,19 @@ g[i+3] + g[i+5], 类似的可以得到关于 g 的递推关系。当然，边界
 i\+1 的时候，更新相同电影前一次和前前次对应区间的值即可。
 
 | kwa | {y}
-|
-|
-|
+| find the pattern
+| 考虑将正整数 n ({le} 10{caret}18) 拆分成几个不同的平方数之和，比如 30=1{caret}2 + 2{caret}2 + 5{caret}2=1{caret}2 \+
+2{caret}2 \+ 3{caret}2 + 4{caret}2，而 8 不存在这样的拆分。 用 k(n) 表示 n 的拆分中，最大的底
+数最小可能是多少。如果 n 不存在这样的拆分，则令 k(n)=∞ 。例如，k(1)=1, k(8)=∞ ,
+k(378)=12, k(380)=10。定义一个数 x 被称为“超重”的，当且仅当存在 y>x，使得
+k(y)<k(x)。从上面的例子可知， 378 是一个“超重”的数。 给定 n，你需要：(1) 求出
+k(n) (2) 求出 1\~n 中有几个“超重”的数。
+| 一个比较牛逼的找规律题。仅 2, 3, 6, 7, 8, 11, 12, 15, 18, 19, {ellipsis},
+108, 112, 128 这 31 个数的 k 值是无穷大的。然后我们设 f(m) = 1{caret}2 +
+2{caret}2 + {ellipsis} + m{caret}2，当 n 足够大是，我们设 ind(n) 为第一个满足
+f(m) >= n 的 m。现在若 k(f(ind(n)) - n) 是无穷，则 k(n)=ind(n)+1, 否则
+k(n)=ind(n)，详细的证明可以参考
+https://www.oi.edu.pl/static/attachment/20160714/oi22.pdf[官方题解]。
 
 | las | {y}
 |
