+ solution for poi 2015, las, pie

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -43,9 +43,10 @@ i\+1 的时候，更新相同电影前一次和前前次对应区间的值即可
 
 | kwa | {y}
 | find the pattern
-| 考虑将正整数 n ({le} 10{caret}18) 拆分成几个不同的平方数之和，比如 30=1{caret}2 + 2{caret}2 + 5{caret}2=1{caret}2 \+
-2{caret}2 \+ 3{caret}2 + 4{caret}2，而 8 不存在这样的拆分。 用 k(n) 表示 n 的拆分中，最大的底
-数最小可能是多少。如果 n 不存在这样的拆分，则令 k(n)=∞ 。例如，k(1)=1, k(8)=∞ ,
+| 考虑将正整数 n ({le} 10{caret}18) 拆分成几个不同的平方数之和，比如
+30=1{caret}2 + 2{caret}2 + 5{caret}2=1{caret}2 \+ 2{caret}2 \+ 3{caret}2 +
+4{caret}2，而 8 不存在这样的拆分。 用 k(n) 表示 n 的拆分中，最大的底数最小可能
+是多少。如果 n 不存在这样的拆分，则令 k(n)=∞ 。例如，k(1)=1, k(8)=∞ ,
 k(378)=12, k(380)=10。定义一个数 x 被称为“超重”的，当且仅当存在 y>x，使得
 k(y)<k(x)。从上面的例子可知， 378 是一个“超重”的数。 给定 n，你需要：(1) 求出
 k(n) (2) 求出 1\~n 中有几个“超重”的数。
@@ -57,14 +58,23 @@ k(n)=ind(n)，详细的证明可以参考
 https://www.oi.edu.pl/static/attachment/20160714/oi22.pdf[官方题解]。
 
 | las | {y}
-|
-|
-|
+| dp
+| 圆桌上摆放着 n ({le} 1000000) 份食物，围成一圈，第i份食物所含热量为 c[i]。 相
+邻两份食物之间坐着一个人，共有 n 个人。每个人有两种选择，吃自己左边或者右边的食
+物。如果两个人选择了同一份食物，这两个人会平分这份食物，每人获得一半的热量。 假
+如某个人改变自己的选择后（其他 n-1 个人的选择不变），可以使自己获得比原先更多的
+热量，那么这个人会不满意。 请你给每个人指定应该吃哪一份食物，使得所有人都能够满
+意。
+| 设 f[i][st] 表示第 i 份食物，左右两边的人的状态是 st 能否可行。然后按顺序转移
+即可。
 
 | pie | {y}
-|
-|
-|
+| simulation
+| 一张 n*m 的方格纸，有些格子需要印成黑色，剩下的格子需要保留白色。你有一个 a*b
+的印章，有些格子是凸起（会沾上墨水）的。你需要判断能否用这个印章印出纸上的图案
+。印的过程中需要满足以下要求：(1) 印章不可以旋转。(2) 不能把墨水印到纸外面。
+(3) 纸上的同一个格子不可以印多次。
+| 模拟，每次挑左上就行。
 
 .5+| stage ii
 
