+ solution for poi 2015, log

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -79,9 +79,15 @@ https://www.oi.edu.pl/static/attachment/20160714/oi22.pdf[官方题解]。
 .5+| stage ii
 
 | log | {y}
-|
-|
-|
+| data structure
+| 维护一个长度为 n ({le} 1000000)的序列，一开始都是 0，支持以下两种操作：1. U k
+a 将序列中第 k 个数修改为 a。2. Z c s 在这个序列上，每次选出 c 个正数，并将它们
+都减去 1，询问能否进行 s 次操作。每次询问独立，即每次询问不会对序列进行修改。一
+共 m ({le} 1000000) 次操作。
+| 如果对于大于等于 s 的数，每次操作肯定都可以选出来减掉，设这些数个数为 x，如果
+c {le} x，那么肯定可行，否则我们看剩下数的和，如果大于等于 (c - x)*s，那么也肯
+定可行。如果观察出这个性质，那么题目就可以用离线离散的树状数组维护出需要的信息
+。这个性质可以用反证法证明。
 
 | pod | {y}
 |
