+ solution for poi 2015, pod

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -90,9 +90,15 @@ c {le} x，那么肯定可行，否则我们看剩下数的和，如果大于等
 。这个性质可以用反证法证明。
 
 | pod | {y}
-|
-|
-|
+| hash, data structure
+| 长度为 n ({le} 1000000) 的一串项链，每颗珠子是 k ({le} n) 种颜色之一。第 i 颗
+与第 i-1, i+1 颗珠子相邻，第 n 颗与第 1 颗也相邻。切两刀，把项链断成两条链。要
+求每种颜色的珠子只能出现在其中一条链中。求方案数量（保证至少存在一种），以及切
+成的两段长度之差绝对值的最小值。
+| 可以用各种数据结构的方法。但是有一种更简单神奇的 hash 做法，对于每个颜色，我
+们可以对每个点做个标号，没经过这个颜色，就给标号 +1，这样在每个点我们可以得到关
+于 k 个颜色的标号序列。我们发现，如果两个点的标号序列是相同的，那么就可以被割掉。
+有了这个 hash 值，我们排序之后，可以算出方案数，然后也能用双指针算出最小差值。
 
 | pus | {y}
 |
