+ solution for poi 2015, pus

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -101,9 +101,15 @@ c {le} x，那么肯定可行，否则我们看剩下数的和，如果大于等
 有了这个 hash 值，我们排序之后，可以算出方案数，然后也能用双指针算出最小差值。
 
 | pus | {y}
-|
-|
-|
+| topo, segment tree
+| 给定一个长度为 n ({le} 100000) 的正整数序列 a，每个数都在 1 到 10{caret}9 范
+围内，告诉你其中 s ({le} n) 个数，并给出 m ({le} 200000) 条信息，每条信息包含三
+个数 l, r, k 以及接下来 k 个正整数，表示 a[l], a[l+1], {ellipsis}, a[r-1], a[r]
+里这 k 个数中的任意一个都比任意一个剩下的 r-l+1-k 个数大（严格大于，即没有等号）。
+请任意构造出一组满足条件的方案，或者判断无解。(sum k {le} 300000)
+| 最直接的做法就是连边建图，跑拓扑。但是这样肯定不行，注意到所有的 k 一共只有
+300000 个，我们可以借助线段树，对一段一段区间进行连边。这样连的边包括线段树上所
+有的边以及每段区间对应小区间连的边，图的规模可以接受。
 
 | kur | {y}
 |
