+ solution for poi 2015, kur

--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -112,9 +112,13 @@ c {le} x，那么肯定可行，否则我们看剩下数的和，如果大于等
 有的边以及每段区间对应小区间连的边，图的规模可以接受。
 
 | kur | {y}
-|
-|
-|
+| inequality, complement
+| 给定 n ({le} 10{caret}9), a, b, p，其中 n, a 互质。定义一个长度为 n 的 01 串
+c[0 {ellipsis} n-1]，其中 c[i]==0 当且仅当 (a*i+b) mod n < p。给定一个长为 m
+({le} 10{caret}6) 的小 01 串，求出小串在大串中出现了几次。
+| 因为 (n, a)=1，所以 (a*i+b) % n 是 [1, n] 不同的数。我们可以根据 m 串以及
+c[i] == 0 的条件得到 m 个不等关系，不过直接求交集比较麻烦，我们可以求补集的并集，
+再求整体的补集即可。
 
 | trz | {y}
 |
