--- a/docs/poi.asciidoc
+++ b/docs/poi.asciidoc
@@ -26,12 +26,12 @@
 |
 |
 
-| klo |
+| klo | {y}
 |
 |
 |
 
-| kur |
+| kur | {y}
 |
 |
 |
@@ -43,17 +43,17 @@
 
 .5+| stage ii
 
-| kar |
+| kar | {y}
 |
 |
 |
 
-| prz |
+| prz | {y}
 |
 |
 |
 
-| sup |
+| sup | {y}
 |
 |
 |
